--- a/Mission_to_Mars0.ipynb
+++ b/Mission_to_Mars0.ipynb
@@ -349,7 +349,9 @@
    "id": "737a7610",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "browser.quit()"
+   ]
   }
  ],
  "metadata": {
