--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -691,27 +691,28 @@
    "outputs": [],
    "source": [
     "# 2. Create a list to hold the images and titles.\n",
-    "hemisphere_image_urls = []\n",
+    "    hemisphere_image_urls = []\n",
     "\n",
-    "html = browser.html\n",
-    "hemispheres_html = soup(html, 'html.parser')\n",
-    "items = hemispheres_html.find_all('div', class_='item')\n",
+    "    html = browser.html\n",
+    "    hemispheres_html = soup(html, 'html.parser')\n",
+    "    items = hemispheres_html.find_all('div', class_='item')\n",
     "\n",
     "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
-    "for i in items:\n",
-    "    title = i.h3.get_text() \n",
-    "    link = i.a['href']\n",
-    "    browser.visit(url+link)\n",
+    "    for i in items:\n",
+    "        out = {}\n",
+    "        title = i.h3.get_text() \n",
+    "        link = i.a['href']\n",
+    "        browser.visit(url+link)\n",
     "    \n",
-    "    #hemisphere = browser.html\n",
-    "    hemisphere = browser.html\n",
-    "    hemisphere_image = soup(hemisphere, 'html.parser')\n",
-    "    container = hemisphere_image.find('ul')\n",
-    "    image_url = url + container.li.a['href']\n",
-    "    title = hemisphere_page.h2.text\n",
-    "    out['img_url'] = image_url\n",
-    "    out['title'] = title\n",
-    "    hemisphere_image_urls.append(out)"
+    "        #hemisphere = browser.html\n",
+    "        hemisphere = browser.html\n",
+    "        hemisphere_image = soup(hemisphere, 'html.parser')\n",
+    "        container = hemisphere_image.find('ul')\n",
+    "        image_url = url + container.li.a['href']\n",
+    "        title = hemisphere_image.h2.text\n",
+    "        out['img_url'] = image_url\n",
+    "        out['title'] = title\n",
+    "        hemisphere_image_urls.a"
    ]
   },
   {
