--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,20 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "9328a223",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from splinter import Browser\n",
-    "from bs4 import BeautifulSoup as soup\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "bc24804f",
+   "execution_count": 3,
+   "id": "6debfe8e",
    "metadata": {},
    "outputs": [
     {
@@ -25,105 +13,172 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 98.0.4758\n",
-      "Get LATEST chromedriver version for 98.0.4758 google-chrome\n",
-      "There is no [win32] chromedriver for browser  in cache\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/98.0.4758.102/chromedriver_win32.zip\n",
-      "Driver has been saved in cache [C:\\Users\\sacle\\.wdm\\drivers\\chromedriver\\win32\\98.0.4758.102]\n"
+      "Current google-chrome version is 99.0.4844\n",
+      "Get LATEST chromedriver version for 99.0.4844 google-chrome\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/99.0.4844.51/chromedriver_win32.zip\n",
+      "Driver has been saved in cache [C:\\Users\\sacle\\.wdm\\drivers\\chromedriver\\win32\\99.0.4844.51]\n",
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 99.0.4844\n",
+      "Get LATEST chromedriver version for 99.0.4844 google-chrome\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/99.0.4844.51/chromedriver_win32.zip\n",
+      "Driver has been saved in cache [C:\\Users\\sacle\\.wdm\\drivers\\chromedriver\\win32\\99.0.4844.51]\n"
      ]
-    }
-   ],
-   "source": [
-    "# Set up Splinter\n",
-    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "browser = Browser('chrome', **executable_path, headless=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4833285a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Visit the Quotes to Scrape site\n",
-    "url = 'http://quotes.toscrape.com/'\n",
-    "browser.visit(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "9f57931f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Parse the HTML\n",
-    "html = browser.html\n",
-    "html_soup = soup(html, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "75e52f42",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Top Ten tags'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Scrape the Title\n",
-    "title = html_soup.find('h2').text\n",
-    "title"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "305dc664",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "love\n",
-      "inspirational\n",
-      "life\n",
-      "humor\n",
-      "books\n",
-      "reading\n",
-      "friendship\n",
-      "friends\n",
-      "truth\n",
-      "simile\n"
+      "{'news_title': \"Newfound Martian Aurora Actually the Most Common; Sheds Light on Mars' Changing Climate\", 'news_paragraph': 'A type of Martian aurora first identified by NASA’s MAVEN spacecraft in 2016 is actually the most common form of aurora occurring on the Red Planet, according to new results from the mission.', 'featured_image': None, 'facts': None, 'last_modified': datetime.datetime(2022, 3, 12, 14, 40, 21, 246604), 'hemispheres': [{'img_url': 'https://marshemispheres.com/images/full.jpg', 'title': 'Cerberus Hemisphere Enhanced'}, {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg', 'title': 'Schiaparelli Hemisphere Enhanced'}, {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg', 'title': 'Syrtis Major Hemisphere Enhanced'}, {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg', 'title': 'Valles Marineris Hemisphere Enhanced'}]}\n"
      ]
     }
    ],
    "source": [
-    "# Scrape the top ten tags\n",
-    "tag_box = html_soup.find('div', class_='tags-box')\n",
-    "# tag_box\n",
-    "tags = tag_box.find_all('a', class_='tag')\n",
+    "from splinter import Browser\n",
+    "from bs4 import BeautifulSoup as soup\n",
+    "import pandas as pd\n",
+    "import datetime as dt\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
     "\n",
-    "for tag in tags:\n",
-    "    word = tag.text\n",
-    "    print(word)"
+    "def scrape_all():\n",
+    "    # Initiate headless driver for deployment\n",
+    "    executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "    browser = Browser('chrome', **executable_path, headless=True)\n",
+    "\n",
+    "    news_title, news_paragraph = mars_news(browser)\n",
+    "\n",
+    "    # Run all scraping functions and store results in a dictionary\n",
+    "    data = {\n",
+    "        \"news_title\": news_title,\n",
+    "        \"news_paragraph\": news_paragraph,\n",
+    "        \"featured_image\": featured_image(browser),\n",
+    "        \"facts\": mars_facts(),\n",
+    "        \"last_modified\": dt.datetime.now(),\n",
+    "        \"hemispheres\": list_hemisphere()\n",
+    "    }\n",
+    "\n",
+    "    # Stop webdriver and return data\n",
+    "    browser.quit()\n",
+    "    return data\n",
+    "\n",
+    "def mars_news(browser):\n",
+    "\n",
+    "    # Scrape Mars News\n",
+    "    # Visit the mars nasa news site\n",
+    "    url = 'https://data-class-mars.s3.amazonaws.com/Mars/index.html'\n",
+    "    browser.visit(url)\n",
+    "\n",
+    "    # Optional delay for loading the page\n",
+    "    browser.is_element_present_by_css('div.list_text', wait_time=1)\n",
+    "\n",
+    "    # Convert the browser html to a soup object and then quit the browser\n",
+    "    html = browser.html\n",
+    "    news_soup = soup(html, 'html.parser')\n",
+    "\n",
+    "    # Add try/except for error handling\n",
+    "    try:\n",
+    "        slide_elem = news_soup.select_one('div.list_text')\n",
+    "        # Use the parent element to find the first 'a' tag and save it as 'news_title'\n",
+    "        news_title = slide_elem.find('div', class_='content_title').get_text()\n",
+    "        # Use the parent element to find the paragraph text\n",
+    "        news_p = slide_elem.find('div', class_='article_teaser_body').get_text()\n",
+    "\n",
+    "    except AttributeError:\n",
+    "        return None, None\n",
+    "\n",
+    "    return news_title, news_p\n",
+    "\n",
+    "def featured_image(browser):\n",
+    "    # Visit URL\n",
+    "    url = 'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/index.html'\n",
+    "    browser.visit(url)\n",
+    "\n",
+    "    # Find and click the full image button\n",
+    "    full_image_elem = browser.find_by_tag('button')[1]\n",
+    "    full_image_elem.click()\n",
+    "\n",
+    "    # Parse the resulting html with soup\n",
+    "    html = browser.html\n",
+    "    img_soup = soup(html, 'html.parser')\n",
+    "\n",
+    "    # Add try/except for error handling\n",
+    "    try:\n",
+    "        # Find the relative image url\n",
+    "        img_url_rel = img_soup.find('img', class_='fancybox-image').get('src')\n",
+    "\n",
+    "    except AttributeError:\n",
+    "        return None\n",
+    "\n",
+    "    # Use the base url to create an absolute url\n",
+    "    img_url = f'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/{img_url_rel}'\n",
+    "\n",
+    "    return img_url\n",
+    "\n",
+    "### Facts\n",
+    "def mars_facts():\n",
+    "    # Add try/except for error handling\n",
+    "    try:\n",
+    "        # Use 'read_html' to scrape the facts table into a dataframe\n",
+    "        df = pd.read_html('https://data-class-mars.s3.amazonaws.com/Mars/index.html')[0]\n",
+    "\n",
+    "    except BaseException:\n",
+    "        return None\n",
+    "\n",
+    "    # Assign columns and set index of dataframe\n",
+    "    df.columns=['Description', 'Mars', 'Earth']\n",
+    "    df.set_index('Description', inplace=True)\n",
+    "\n",
+    "    # Convert dataframe into HTML format, add bootstrap\n",
+    "    # Convert dataframe into HTML format, add bootstrap\n",
+    "    return df.to_html(classes=\"table table-striped\")\n",
+    "\n",
+    "def list_hemisphere():\n",
+    "    executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "    browser = Browser('chrome', **executable_path, headless=False)\n",
+    "\n",
+    "    url = 'https://marshemispheres.com/'\n",
+    "    \n",
+    "    browser.visit(url)\n",
+    "    \n",
+    "# 2. Create a list to hold the images and titles.\n",
+    "    hemisphere_image_urls = []\n",
+    "\n",
+    "    html = browser.html\n",
+    "    hemispheres_html = soup(html, 'html.parser')\n",
+    "    items = hemispheres_html.find_all('div', class_='item')\n",
+    "\n",
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "    for i in items:\n",
+    "        out = {}\n",
+    "        title = i.h3.get_text() \n",
+    "        link = i.a['href']\n",
+    "        browser.visit(url+link)\n",
+    "    \n",
+    "        #hemisphere = browser.html\n",
+    "        hemisphere = browser.html\n",
+    "        hemisphere_image = soup(hemisphere, 'html.parser')\n",
+    "        container = hemisphere_image.find('ul')\n",
+    "        image_url = url + container.li.a['href']\n",
+    "        title = hemisphere_image.h2.text\n",
+    "        out['img_url'] = image_url\n",
+    "        out['title'] = title\n",
+    "        hemisphere_image_urls.append(out)\n",
+    " # 5. Quit the browser\n",
+    "    browser.quit()\n",
+    "\n",
+    "    return hemisphere_image_urls\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    # If running as script, print scraped data\n",
+    "    print(scrape_all())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74364d9c",
+   "id": "9dc1ca83",
    "metadata": {},
    "outputs": [],
    "source": []
